--- a/program-manager/Cargo.toml
+++ b/program-manager/Cargo.toml
@@ -42,6 +42,8 @@ valence-osmosis-cl-lper              = { workspace = true }
 valence-osmosis-cl-withdrawer        = { workspace = true }
 valence-generic-ibc-transfer-library = { workspace = true }
 valence-neutron-ibc-transfer-library = { workspace = true }
+valence-mars-lending                 = { workspace = true }
+valence-mars-withdrawer              = { workspace = true }
 
 tokio              = { workspace = true }
 aho-corasick       = "1.1"
