--- a/packages/lending-utils/Cargo.toml
+++ b/packages/lending-utils/Cargo.toml
@@ -8,3 +8,4 @@ description = "Helpers for lending integrations"
 [dependencies]
 cosmwasm-std    = { workspace = true }
 cosmwasm-schema = { workspace = true }
+serde           = { workspace = true }
