--- a/packages/lending-utils/Cargo.toml
+++ b/packages/lending-utils/Cargo.toml
@@ -9,3 +9,5 @@ description = "Helpers for lending integrations"
 cosmwasm-std    = { workspace = true }
 cosmwasm-schema = { workspace = true }
 serde           = { workspace = true }
+schemars        = { workspace = true }
+prost           = "0.12"
