--- a/program-manager/Cargo.toml
+++ b/program-manager/Cargo.toml
@@ -44,6 +44,7 @@ valence-generic-ibc-transfer-library = { workspace = true }
 valence-neutron-ibc-transfer-library = { workspace = true }
 valence-mars-lending                 = { workspace = true }
 valence-nolus-lending                = { workspace = true }
+valence-elys-lending                 = { workspace = true }
 
 tokio              = { workspace = true }
 aho-corasick       = "1.1"
