--- a/program-manager/Cargo.toml
+++ b/program-manager/Cargo.toml
@@ -45,6 +45,8 @@ valence-neutron-ibc-transfer-library = { workspace = true }
 valence-mars-lending                 = { workspace = true }
 valence-nolus-lending                = { workspace = true }
 valence-elys-lending                 = { workspace = true }
+valence-duality-lper                 = { workspace = true }
+valence-duality-withdrawer           = { workspace = true }
 
 tokio              = { workspace = true }
 aho-corasick       = "1.1"
