--- a/program-manager/Cargo.toml
+++ b/program-manager/Cargo.toml
@@ -47,6 +47,8 @@ valence-nolus-lending                = { workspace = true }
 valence-elys-lending                 = { workspace = true }
 valence-duality-lper                 = { workspace = true }
 valence-duality-withdrawer           = { workspace = true }
+valence-magma-lper                   = { workspace = true }
+valence-magma-withdrawer             = { workspace = true }
 
 tokio              = { workspace = true }
 aho-corasick       = "1.1"
