--- a/program-manager/Cargo.toml
+++ b/program-manager/Cargo.toml
@@ -49,6 +49,7 @@ valence-duality-lper                 = { workspace = true }
 valence-duality-withdrawer           = { workspace = true }
 valence-magma-lper                   = { workspace = true }
 valence-magma-withdrawer             = { workspace = true }
+valence-vortex-lper                  = { workspace = true }
 
 tokio              = { workspace = true }
 aho-corasick       = "1.1"
